--- a/agronursery/android/app/build.gradle
+++ b/agronursery/android/app/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
+    // ADD THIS LINE 👇
+    id "com.google.gms.google-services"
+
+    // Flutter plugin must come last
     id "dev.flutter.flutter-gradle-plugin"
 }
 
@@ -34,20 +37,18 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.agronursery"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        ndk {
+            abiFilters "arm64-v8a", "armeabi-v7a", "x86_64"
+        }
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
@@ -55,4 +56,18 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    // ADD FIREBASE BoM 👇
+    implementation platform('com.google.firebase:firebase-bom:32.2.0')
+
+    // BASIC FIREBASE SDKs 👇
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-storage'
+
+    // (Optional but safe)
+    // implementation 'com.google.firebase:firebase-messaging'
 }
