--- a/agronursery/pubspec.yaml
+++ b/agronursery/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  unique_identifier: ^0.3.0
+
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
