--- a/agronursery/pubspec.yaml
+++ b/agronursery/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+# of the product and versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
@@ -31,7 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  # Firebase packages
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  firebase_storage: ^11.6.0
+  firebase_messaging: ^14.7.10
+  
+  # State management and utilities
+  provider: ^6.1.1
+  image_picker: ^1.0.4
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -86,5 +96,5 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # For details regarding fonts from package dependencies, see
+  # https://flutter.dev/custom-fonts/#from-packages
